Correct role metadata

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,5 +1,6 @@
 galaxy_info:
-  author: Stone Soup Kitchen
+  role_name: sudo
+  author: stonesoupkitchen
   description: Configure sudo on Linux systems
   license: BSD-3-Clause
   min_ansible_version: 2.9
