--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,8 +9,98 @@ defaults:
   run:
     working-directory: 'stonesoupkitchen.sudo'
 
+permissions: read-all
+
 jobs:
-  build:
+  analyze:
+    name: Analyze
+    permissions:
+      contents: read
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          path: 'stonesoupkitchen.sudo'
+
+      - name: Set up Python 3
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.x"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip pipenv wheel
+          pipenv install --dev
+
+      - name: Lint
+        run: |
+          make lint
+
+  test:
+    name: Test
+    needs: [Analyze]
+    permissions:
+      contents: read
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        distro:
+          - 'debian:10'
+          - 'debian:11'
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          path: 'stonesoupkitchen.sudo'
+
+      - name: Set up Python 3
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.x"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip pipenv wheel
+          pipenv install --dev
+
+      - name: Run Molecule tests
+        run: make test
+        env:
+          ANSIBLE_FORCE_COLOR: '1'
+          PY_COLORS: '1'
+          MOLECULE_DISTRO: ${{ matrix.distro }}
+
+  release:
+    name: Release
+    permissions:
+      contents: read
+    needs: [Analyze, Test]
+    if: ${{ github.ref == 'refs/heads/main' }}
+    runs-on: ubuntu-latest
+    container: ghcr.io/stonesoupkitchen/github-publisher:latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          path: 'stonesoupkitchen.sudo'
+          fetch-depth: 0
+          token: ${{ secrets.SSKBOT_RELEASE_TOKEN }}
+
+      - name: Release
+        env:
+          GIT_USER: stonesoupkitchenbot
+          GIT_EMAIL: 80210448+stonesoupkitchenbot@users.noreply.github.com
+          GITHUB_TOKEN: ${{ secrets.SSKBOT_RELEASE_TOKEN }}
+        run: create_release
+
+  publish:
+    name: Publish
+    permissions:
+      contents: read
+    needs: [Analyze, Test, Release]
+    if: ${{ github.ref == 'refs/heads/main' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -26,14 +116,11 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          pip3 install ansible-base
 
-      - name: Lint with ansible-lint
-        run: |
-          ansible-lint
-
-      - name: Run Molecule tests
-        run: molecule test
-        env:
-          ANSIBLE_FORCE_COLOR: '1'
-          PY_COLORS: '1'
+      - name: Publish to Ansible Galaxy
+        run: >
+          ansible-galaxy role import
+          --api-key ${{ secrets.GALAXY_API_KEY }}
+          $(echo $GITHUB_REPOSITORY | cut -d/ -f1)
+          $(echo $GITHUB_REPOSITORY | cut -d/ -f2)
